--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
     <nav class="flex items-center gap-3">
       <a href="#catalogo" class="btn-ghost">Catálogo</a>
-      <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="btn-ghost">WhatsApp</a>
+      <a href="https://wa.me/5493624051806" target="_blank" class="btn-ghost">WhatsApp</a>
       <button id="adminBtn" class="btn">Admin</button>
     </nav>
   </div>
@@ -54,7 +54,7 @@
   <section id="catalogo" class="mb-6">
     <h3 class="text-xl font-bold mb-3">Catálogo</h3>
     <iframe
-      src="https://www.canva.com/design/TU-LINK-DE-CANVA/view?embed"
+      src="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view"
       width="100%"
       height="900"
       style="border:none; border-radius:1rem;"
