--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
     <nav class="flex items-center gap-3">
       <a href="#catalogo" class="btn-ghost">Catálogo</a>
-      <a href="https://wa.me/5493624051806" target="_blank" class="btn-ghost">WhatsApp</a>
+      <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="btn-ghost">WhatsApp</a>
       <button id="adminBtn" class="btn">Admin</button>
     </nav>
   </div>
@@ -53,24 +53,23 @@
   <!-- Catálogo desde Canva -->
   <section id="catalogo" class="mb-6">
     <h3 class="text-xl font-bold mb-3">Catálogo</h3>
-    <iframe
-      src="<div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view?utm_content=DAGy46arrRo&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h7ec2317448">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGy46arrRo&#x2F;Zgw0YV4ZEdt4lnTEUoggVQ&#x2F;view?utm_content=DAGy46arrRo&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Documento A4 Catálogo Muebles Simple Beige</a> de ivo cettour"
-      width="100%"
-      height="900"
-      style="border:none; border-radius:1rem;"
-      allowfullscreen="true"
-      loading="lazy">
-    </iframe>
+    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+      box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em;
+      overflow: hidden; border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy"
+        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0;"
+        src="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view?embed"
+        allowfullscreen="allowfullscreen"
+        allow="fullscreen">
+      </iframe>
+    </div>
+    <a href="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view?utm_content=DAGy46arrRo&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+       target="_blank" rel="noopener" class="text-sm text-blue-400 underline">
+       Abrir catálogo en Canva
+    </a>
   </section>
 
-  <!-- Admin Panel (si querés seguir usándolo) -->
+  <!-- Admin Panel -->
   <section id="adminPanel" class="card p-6 hidden">
     <div class="flex items-center justify-between mb-4">
       <h3 class="text-xl font-bold">Administrador</h3>
@@ -79,7 +78,7 @@
         <button id="signOutBtn" class="btn-ghost">Salir</button>
       </div>
     </div>
-    <p class="muted">El catálogo ahora viene directo de Canva. El panel lo podés usar para otras configuraciones si querés.</p>
+    <p class="muted">El catálogo se actualiza desde Canva automáticamente.</p>
   </section>
 </main>
 
@@ -103,4 +102,3 @@
 <script type="module" src="/app.js"></script>
 </body>
 </html>
-
