--- a/public/index.html
+++ b/public/index.html
@@ -53,20 +53,14 @@
   <!-- Catálogo desde Canva -->
   <section id="catalogo" class="mb-6">
     <h3 class="text-xl font-bold mb-3">Catálogo</h3>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
-      box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em;
-      overflow: hidden; border-radius: 8px; will-change: transform;">
-      <iframe loading="lazy"
-        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0;"
-        src="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view?embed"
-        allowfullscreen="allowfullscreen"
-        allow="fullscreen">
-      </iframe>
-    </div>
-    <a href="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view?utm_content=DAGy46arrRo&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
-       target="_blank" rel="noopener" class="text-sm text-blue-400 underline">
-       Abrir catálogo en Canva
-    </a>
+    <iframe
+      src="https://www.canva.com/design/DAGy46arrRo/Zgw0YV4ZEdt4lnTEUoggVQ/view?embed"
+      width="100%"
+      height="900"
+      style="border:none; border-radius:1rem;"
+      allowfullscreen="true"
+      loading="lazy">
+    </iframe>
   </section>
 
   <!-- Admin Panel -->
