--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
     <nav class="flex items-center gap-3">
       <a href="#catalogo" class="btn-ghost">Catálogo</a>
-      <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="btn-ghost">WhatsApp</a>
+      <a href="https://wa.me/5493624051806" target="_blank" class="btn-ghost">WhatsApp</a>
       <button id="adminBtn" class="btn">Admin</button>
     </nav>
   </div>
