--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <img src="/favicon.svg" alt="CTI" class="w-8 h-8">
-      <h1 class="text-xl font-extrabold">CTI Muebles</h1>
+      <h1 class="text-xl font-extrabold">NID  —Muebles a Medida —</h1>
     </div>
     <nav class="flex items-center gap-3">
       <a href="#catalogo" class="btn-ghost">Catálogo</a>
